# reumann-byzantine-fault

./: .gitignore  meson.build  meson_options.txt
doc/: ByzantinischeFehler.bib  ByzantinischeFehler.tex
include/: generals.h  message_utils.h
reumann/: meson_options.txt
src/: main.cpp
src/commander/: main.cpp
src/leutnant/: main.cpp
